5-30-15:
Napiophelios put together some nice smoke bombs and molotov cocktails for this mod, I(Nathan) did a few tweaks, changed some alignment and took care of some depreciated functions to stop debug spamming.

5-12-15:
Lanterns are here, both wall mounted a table top. Craft with a piece of glass above a string above a lump of iron. Yields one lantern, craft the lantern to change between wall mounted and table top.
Lanterns burn oil, twelve minutes of light for one bottle of oil. Put six leaves above a glass vessel to create lantern oil.

4-15-15:
All fires now die after time. When you create embers either by lighting kindling or crafting directly you have about three minutes to add wood. After the wood all burns up you have three minutes to add more wood or the embers turn back into kindling and need to be activated with a lighter again.

4-13-15:
Changed some how I add the drops to gravel, no longer do I replace the entire node, just add the new drop info to it. This should keep it from breaking anything that does the same to gravel.

4-12-15:
Some major overhauling, not of code, but layout, no longer is everything stored in the init.lua, it's all broken down into neat files.
I added finite torches, change the settings in the config, right now you can only turn them on or off, settings are not retro-active, only torches placed after the update will burn out. When a torch burns out it turns into a torch stub which can be picked up and burnt as fuel.
I changed a couple textures down to 16x16, they had been 32x32. Renamed textures to follow proper naming methods, this won't change any placed nodes.

11-22-14:
Changed a couple textures.
Currently using nodeboxes for torches, so they are no longer invisible.

11-19-14:
Campfires are working altogether now. Craft kindling and add some fuel to it, and then click on it with the lighter until it starts on fire.

11-12-14:
Removed the ABM for torches, and replaced the two nodes with just one.